tester/testsuite/bad/bad074.jl
// Void declarations are invalid.

int main() {
  void x;
  return 0;
}
